# extdep-freetype

./: CMakeLists.txt  dist.info  freetype-config.cmake.in
cmake/: dist.cmake
lib/arch/win32/: Makefile.CL
